--- a/worksapace_vscode/ui/index.html
+++ b/worksapace_vscode/ui/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Penteado</title>
     <link rel="stylesheet" href="meus-estilos.css" />
+
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <style>
+    body {
+      font-family: 'Montserrat';
+    }
+  </style>
 </head>
 
 <body>
@@ -50,4 +58,4 @@
     </div>
 </body>
 
-</html>
+</html> 
