--- a/worksapace_vscode/FormulariosWeb/bootstrap-olamundo.html
+++ b/worksapace_vscode/FormulariosWeb/bootstrap-olamundo.html
@@ -16,15 +16,15 @@
 
     <div class="container mt-5">
         <div class="row">
-            <div class="col">
+            <div class="col-sm-4">
                 <h3>Coluna 1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias neque similique inventore enim reiciendis voluptas iusto omnis, provident, quasi odit eos commodi debitis perspiciatis quis distinctio? Distinctio mollitia dolor tenetur.</p>
             </div>
-            <div class="col">
+            <div class="col-sm-4">
                 <h3>Coluna 2</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, dignissimos mollitia dolores unde impedit culpa laudantium amet nesciunt reiciendis sunt rerum. Laborum at quas dolorem eligendi ratione molestias, minima tempore.</p>
             </div>
-            <div class="col">
+            <div class="col-sm-4">
                 <h3>Coluna 3</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nihil atque, quod assumenda sed ab laboriosam inventore ex culpa ducimus neque sequi nesciunt ullam cupiditate ipsa sapiente asperiores minima minus.</p>
             </div>
