--- a/worksapace_vscode/FormulariosWeb/cadastro-pessoa-fisica.html
+++ b/worksapace_vscode/FormulariosWeb/cadastro-pessoa-fisica.html
@@ -19,26 +19,26 @@
 
         <label>Estado Civil</label>
         <br>
-        <input id="inEC1" name="inEC" type="radio" value="solteiro"
+        <input id="inEC1" name="inEC" type="radio" value="solteiro">
         <label for="inEC1">Solteiro</label>
 
-        <input id="inEC2" name="inEC" type="radio" value="casado"
+        <input id="inEC2" name="inEC" type="radio" value="casado">
         <label for="inEC2">Casado</label>
 
-        <input id="inEC3" name="inEC" type="radio" value="divorciado"
+        <input id="inEC3" name="inEC" type="radio" value="divorciado">
         <label for="inEC3">Divorciado</label>
         <br>
         <br>
 
         <label>Habilidades</label>
         <br>
-        <input id="inHab1" name="inEC" type="checkbox" value="html"
+        <input id="inHab1" name="inEC" type="checkbox" value="html">
         <label for="inHab1">HTML</label>
 
-        <input id="inHab2" name="inEC" type="checkbox" value="css"
+        <input id="inHab2" name="inEC" type="checkbox" value="css">
         <label for="inHab2">CSS</label>
 
-        <input id="inHab3" name="inEC" type="checkbox" value="js"
+        <input id="inHab3" name="inEC" type="checkbox" value="js">
         <label for="inHab3">JavaScript</label>
         <br>
         <br>
